COSC261/assignment/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Statements
Rule 2     Read -> READ Id
Rule 3     Write -> WRITE Expression
Rule 4     If -> IF BooleanExpression THEN Statements ELSE Statements END
Rule 5     If -> IF BooleanExpression THEN Statements END
Rule 6     While -> WHILE BooleanExpression DO Statements END
Rule 7     Assignment -> Id BEC Expression
Rule 8     Comparison -> Expression Relation Expression
Rule 9     Relation -> EQ
Rule 10    Relation -> NEQ
Rule 11    Relation -> LESS
Rule 12    Relation -> LEQ
Rule 13    Relation -> GRTR
Rule 14    Relation -> GEQ
Rule 15    Expression -> Expression ADD Expression
Rule 16    Expression -> Expression SUB Expression
Rule 17    Expression -> Expression MUL Expression
Rule 18    Expression -> Expression DIV Expression
Rule 19    Expression -> LPAR Expression RPAR
Rule 20    Expression -> NUM
Rule 21    Expression -> Id
Rule 22    Id -> ID
Rule 23    Statements -> Statement
Rule 24    Statements -> Statements SEM Statement
Rule 25    Statement -> If
Rule 26    Statement -> While
Rule 27    Statement -> Assignment
Rule 28    Statement -> Read
Rule 29    Statement -> Write
Rule 30    BooleanExpression -> BooleanTerm
Rule 31    BooleanExpression -> BooleanExpression OR BooleanTerm
Rule 32    BooleanTerm -> BooleanFactor
Rule 33    BooleanTerm -> BooleanTerm AND BooleanFactor
Rule 34    BooleanFactor -> NOT BooleanFactor
Rule 35    BooleanFactor -> Comparison

Terminals, with rules where they appear

ADD                  : 15
AND                  : 33
BEC                  : 7
DIV                  : 18
DO                   : 6
ELSE                 : 4
END                  : 4 5 6
EQ                   : 9
GEQ                  : 14
GRTR                 : 13
ID                   : 22
IF                   : 4 5
LEQ                  : 12
LESS                 : 11
LPAR                 : 19
MUL                  : 17
NEQ                  : 10
NOT                  : 34
NUM                  : 20
OR                   : 31
READ                 : 2
RPAR                 : 19
SEM                  : 24
SUB                  : 16
THEN                 : 4 5
WHILE                : 6
WRITE                : 3
error                : 

Nonterminals, with rules where they appear

Assignment           : 27
BooleanExpression    : 4 5 6 31
BooleanFactor        : 32 33 34
BooleanTerm          : 30 31 33
Comparison           : 35
Expression           : 3 7 8 8 15 15 16 16 17 17 18 18 19
Id                   : 2 7 21
If                   : 25
Program              : 0
Read                 : 28
Relation             : 8
Statement            : 23 24
Statements           : 1 4 4 5 6 24
While                : 26
Write                : 29

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Statements
    (23) Statements -> . Statement
    (24) Statements -> . Statements SEM Statement
    (25) Statement -> . If
    (26) Statement -> . While
    (27) Statement -> . Assignment
    (28) Statement -> . Read
    (29) Statement -> . Write
    (4) If -> . IF BooleanExpression THEN Statements ELSE Statements END
    (5) If -> . IF BooleanExpression THEN Statements END
    (6) While -> . WHILE BooleanExpression DO Statements END
    (7) Assignment -> . Id BEC Expression
    (2) Read -> . READ Id
    (3) Write -> . WRITE Expression
    (22) Id -> . ID

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    READ            shift and go to state 12
    WRITE           shift and go to state 13
    ID              shift and go to state 14

    Program                        shift and go to state 1
    Statements                     shift and go to state 2
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    While                          shift and go to state 5
    Assignment                     shift and go to state 6
    Read                           shift and go to state 7
    Write                          shift and go to state 8
    Id                             shift and go to state 11

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Statements .
    (24) Statements -> Statements . SEM Statement

    $end            reduce using rule 1 (Program -> Statements .)
    SEM             shift and go to state 15


state 3

    (23) Statements -> Statement .

    SEM             reduce using rule 23 (Statements -> Statement .)
    $end            reduce using rule 23 (Statements -> Statement .)
    ELSE            reduce using rule 23 (Statements -> Statement .)
    END             reduce using rule 23 (Statements -> Statement .)


state 4

    (25) Statement -> If .

    SEM             reduce using rule 25 (Statement -> If .)
    $end            reduce using rule 25 (Statement -> If .)
    ELSE            reduce using rule 25 (Statement -> If .)
    END             reduce using rule 25 (Statement -> If .)


state 5

    (26) Statement -> While .

    SEM             reduce using rule 26 (Statement -> While .)
    $end            reduce using rule 26 (Statement -> While .)
    ELSE            reduce using rule 26 (Statement -> While .)
    END             reduce using rule 26 (Statement -> While .)


state 6

    (27) Statement -> Assignment .

    SEM             reduce using rule 27 (Statement -> Assignment .)
    $end            reduce using rule 27 (Statement -> Assignment .)
    ELSE            reduce using rule 27 (Statement -> Assignment .)
    END             reduce using rule 27 (Statement -> Assignment .)


state 7

    (28) Statement -> Read .

    SEM             reduce using rule 28 (Statement -> Read .)
    $end            reduce using rule 28 (Statement -> Read .)
    ELSE            reduce using rule 28 (Statement -> Read .)
    END             reduce using rule 28 (Statement -> Read .)


state 8

    (29) Statement -> Write .

    SEM             reduce using rule 29 (Statement -> Write .)
    $end            reduce using rule 29 (Statement -> Write .)
    ELSE            reduce using rule 29 (Statement -> Write .)
    END             reduce using rule 29 (Statement -> Write .)


state 9

    (4) If -> IF . BooleanExpression THEN Statements ELSE Statements END
    (5) If -> IF . BooleanExpression THEN Statements END
    (30) BooleanExpression -> . BooleanTerm
    (31) BooleanExpression -> . BooleanExpression OR BooleanTerm
    (32) BooleanTerm -> . BooleanFactor
    (33) BooleanTerm -> . BooleanTerm AND BooleanFactor
    (34) BooleanFactor -> . NOT BooleanFactor
    (35) BooleanFactor -> . Comparison
    (8) Comparison -> . Expression Relation Expression
    (15) Expression -> . Expression ADD Expression
    (16) Expression -> . Expression SUB Expression
    (17) Expression -> . Expression MUL Expression
    (18) Expression -> . Expression DIV Expression
    (19) Expression -> . LPAR Expression RPAR
    (20) Expression -> . NUM
    (21) Expression -> . Id
    (22) Id -> . ID

    NOT             shift and go to state 19
    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    BooleanExpression              shift and go to state 16
    BooleanTerm                    shift and go to state 17
    BooleanFactor                  shift and go to state 18
    Comparison                     shift and go to state 20
    Expression                     shift and go to state 21
    Id                             shift and go to state 24

state 10

    (6) While -> WHILE . BooleanExpression DO Statements END
    (30) BooleanExpression -> . BooleanTerm
    (31) BooleanExpression -> . BooleanExpression OR BooleanTerm
    (32) BooleanTerm -> . BooleanFactor
    (33) BooleanTerm -> . BooleanTerm AND BooleanFactor
    (34) BooleanFactor -> . NOT BooleanFactor
    (35) BooleanFactor -> . Comparison
    (8) Comparison -> . Expression Relation Expression
    (15) Expression -> . Expression ADD Expression
    (16) Expression -> . Expression SUB Expression
    (17) Expression -> . Expression MUL Expression
    (18) Expression -> . Expression DIV Expression
    (19) Expression -> . LPAR Expression RPAR
    (20) Expression -> . NUM
    (21) Expression -> . Id
    (22) Id -> . ID

    NOT             shift and go to state 19
    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    BooleanExpression              shift and go to state 25
    BooleanTerm                    shift and go to state 17
    BooleanFactor                  shift and go to state 18
    Comparison                     shift and go to state 20
    Expression                     shift and go to state 21
    Id                             shift and go to state 24

state 11

    (7) Assignment -> Id . BEC Expression

    BEC             shift and go to state 26


state 12

    (2) Read -> READ . Id
    (22) Id -> . ID

    ID              shift and go to state 14

    Id                             shift and go to state 27

state 13

    (3) Write -> WRITE . Expression
    (15) Expression -> . Expression ADD Expression
    (16) Expression -> . Expression SUB Expression
    (17) Expression -> . Expression MUL Expression
    (18) Expression -> . Expression DIV Expression
    (19) Expression -> . LPAR Expression RPAR
    (20) Expression -> . NUM
    (21) Expression -> . Id
    (22) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 28
    Id                             shift and go to state 24

state 14

    (22) Id -> ID .

    BEC             reduce using rule 22 (Id -> ID .)
    ADD             reduce using rule 22 (Id -> ID .)
    SUB             reduce using rule 22 (Id -> ID .)
    MUL             reduce using rule 22 (Id -> ID .)
    DIV             reduce using rule 22 (Id -> ID .)
    EQ              reduce using rule 22 (Id -> ID .)
    NEQ             reduce using rule 22 (Id -> ID .)
    LESS            reduce using rule 22 (Id -> ID .)
    LEQ             reduce using rule 22 (Id -> ID .)
    GRTR            reduce using rule 22 (Id -> ID .)
    GEQ             reduce using rule 22 (Id -> ID .)
    SEM             reduce using rule 22 (Id -> ID .)
    $end            reduce using rule 22 (Id -> ID .)
    ELSE            reduce using rule 22 (Id -> ID .)
    END             reduce using rule 22 (Id -> ID .)
    RPAR            reduce using rule 22 (Id -> ID .)
    AND             reduce using rule 22 (Id -> ID .)
    THEN            reduce using rule 22 (Id -> ID .)
    OR              reduce using rule 22 (Id -> ID .)
    DO              reduce using rule 22 (Id -> ID .)


state 15

    (24) Statements -> Statements SEM . Statement
    (25) Statement -> . If
    (26) Statement -> . While
    (27) Statement -> . Assignment
    (28) Statement -> . Read
    (29) Statement -> . Write
    (4) If -> . IF BooleanExpression THEN Statements ELSE Statements END
    (5) If -> . IF BooleanExpression THEN Statements END
    (6) While -> . WHILE BooleanExpression DO Statements END
    (7) Assignment -> . Id BEC Expression
    (2) Read -> . READ Id
    (3) Write -> . WRITE Expression
    (22) Id -> . ID

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    READ            shift and go to state 12
    WRITE           shift and go to state 13
    ID              shift and go to state 14

    Statement                      shift and go to state 29
    If                             shift and go to state 4
    While                          shift and go to state 5
    Assignment                     shift and go to state 6
    Read                           shift and go to state 7
    Write                          shift and go to state 8
    Id                             shift and go to state 11

state 16

    (4) If -> IF BooleanExpression . THEN Statements ELSE Statements END
    (5) If -> IF BooleanExpression . THEN Statements END
    (31) BooleanExpression -> BooleanExpression . OR BooleanTerm

    THEN            shift and go to state 30
    OR              shift and go to state 31


state 17

    (30) BooleanExpression -> BooleanTerm .
    (33) BooleanTerm -> BooleanTerm . AND BooleanFactor

    THEN            reduce using rule 30 (BooleanExpression -> BooleanTerm .)
    OR              reduce using rule 30 (BooleanExpression -> BooleanTerm .)
    DO              reduce using rule 30 (BooleanExpression -> BooleanTerm .)
    AND             shift and go to state 32


state 18

    (32) BooleanTerm -> BooleanFactor .

    AND             reduce using rule 32 (BooleanTerm -> BooleanFactor .)
    THEN            reduce using rule 32 (BooleanTerm -> BooleanFactor .)
    OR              reduce using rule 32 (BooleanTerm -> BooleanFactor .)
    DO              reduce using rule 32 (BooleanTerm -> BooleanFactor .)


state 19

    (34) BooleanFactor -> NOT . BooleanFactor
    (34) BooleanFactor -> . NOT BooleanFactor
    (35) BooleanFactor -> . Comparison
    (8) Comparison -> . Expression Relation Expression
    (15) Expression -> . Expression ADD Expression
    (16) Expression -> . Expression SUB Expression
    (17) Expression -> . Expression MUL Expression
    (18) Expression -> . Expression DIV Expression
    (19) Expression -> . LPAR Expression RPAR
    (20) Expression -> . NUM
    (21) Expression -> . Id
    (22) Id -> . ID

    NOT             shift and go to state 19
    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    BooleanFactor                  shift and go to state 33
    Comparison                     shift and go to state 20
    Expression                     shift and go to state 21
    Id                             shift and go to state 24

state 20

    (35) BooleanFactor -> Comparison .

    AND             reduce using rule 35 (BooleanFactor -> Comparison .)
    THEN            reduce using rule 35 (BooleanFactor -> Comparison .)
    OR              reduce using rule 35 (BooleanFactor -> Comparison .)
    DO              reduce using rule 35 (BooleanFactor -> Comparison .)


state 21

    (8) Comparison -> Expression . Relation Expression
    (15) Expression -> Expression . ADD Expression
    (16) Expression -> Expression . SUB Expression
    (17) Expression -> Expression . MUL Expression
    (18) Expression -> Expression . DIV Expression
    (9) Relation -> . EQ
    (10) Relation -> . NEQ
    (11) Relation -> . LESS
    (12) Relation -> . LEQ
    (13) Relation -> . GRTR
    (14) Relation -> . GEQ

    ADD             shift and go to state 35
    SUB             shift and go to state 36
    MUL             shift and go to state 37
    DIV             shift and go to state 38
    EQ              shift and go to state 39
    NEQ             shift and go to state 40
    LESS            shift and go to state 41
    LEQ             shift and go to state 42
    GRTR            shift and go to state 43
    GEQ             shift and go to state 44

    Relation                       shift and go to state 34

state 22

    (19) Expression -> LPAR . Expression RPAR
    (15) Expression -> . Expression ADD Expression
    (16) Expression -> . Expression SUB Expression
    (17) Expression -> . Expression MUL Expression
    (18) Expression -> . Expression DIV Expression
    (19) Expression -> . LPAR Expression RPAR
    (20) Expression -> . NUM
    (21) Expression -> . Id
    (22) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 45
    Id                             shift and go to state 24

state 23

    (20) Expression -> NUM .

    ADD             reduce using rule 20 (Expression -> NUM .)
    SUB             reduce using rule 20 (Expression -> NUM .)
    MUL             reduce using rule 20 (Expression -> NUM .)
    DIV             reduce using rule 20 (Expression -> NUM .)
    EQ              reduce using rule 20 (Expression -> NUM .)
    NEQ             reduce using rule 20 (Expression -> NUM .)
    LESS            reduce using rule 20 (Expression -> NUM .)
    LEQ             reduce using rule 20 (Expression -> NUM .)
    GRTR            reduce using rule 20 (Expression -> NUM .)
    GEQ             reduce using rule 20 (Expression -> NUM .)
    SEM             reduce using rule 20 (Expression -> NUM .)
    $end            reduce using rule 20 (Expression -> NUM .)
    ELSE            reduce using rule 20 (Expression -> NUM .)
    END             reduce using rule 20 (Expression -> NUM .)
    RPAR            reduce using rule 20 (Expression -> NUM .)
    AND             reduce using rule 20 (Expression -> NUM .)
    THEN            reduce using rule 20 (Expression -> NUM .)
    OR              reduce using rule 20 (Expression -> NUM .)
    DO              reduce using rule 20 (Expression -> NUM .)


state 24

    (21) Expression -> Id .

    ADD             reduce using rule 21 (Expression -> Id .)
    SUB             reduce using rule 21 (Expression -> Id .)
    MUL             reduce using rule 21 (Expression -> Id .)
    DIV             reduce using rule 21 (Expression -> Id .)
    EQ              reduce using rule 21 (Expression -> Id .)
    NEQ             reduce using rule 21 (Expression -> Id .)
    LESS            reduce using rule 21 (Expression -> Id .)
    LEQ             reduce using rule 21 (Expression -> Id .)
    GRTR            reduce using rule 21 (Expression -> Id .)
    GEQ             reduce using rule 21 (Expression -> Id .)
    SEM             reduce using rule 21 (Expression -> Id .)
    $end            reduce using rule 21 (Expression -> Id .)
    ELSE            reduce using rule 21 (Expression -> Id .)
    END             reduce using rule 21 (Expression -> Id .)
    RPAR            reduce using rule 21 (Expression -> Id .)
    AND             reduce using rule 21 (Expression -> Id .)
    THEN            reduce using rule 21 (Expression -> Id .)
    OR              reduce using rule 21 (Expression -> Id .)
    DO              reduce using rule 21 (Expression -> Id .)


state 25

    (6) While -> WHILE BooleanExpression . DO Statements END
    (31) BooleanExpression -> BooleanExpression . OR BooleanTerm

    DO              shift and go to state 46
    OR              shift and go to state 31


state 26

    (7) Assignment -> Id BEC . Expression
    (15) Expression -> . Expression ADD Expression
    (16) Expression -> . Expression SUB Expression
    (17) Expression -> . Expression MUL Expression
    (18) Expression -> . Expression DIV Expression
    (19) Expression -> . LPAR Expression RPAR
    (20) Expression -> . NUM
    (21) Expression -> . Id
    (22) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Id                             shift and go to state 24
    Expression                     shift and go to state 47

state 27

    (2) Read -> READ Id .

    SEM             reduce using rule 2 (Read -> READ Id .)
    $end            reduce using rule 2 (Read -> READ Id .)
    ELSE            reduce using rule 2 (Read -> READ Id .)
    END             reduce using rule 2 (Read -> READ Id .)


state 28

    (3) Write -> WRITE Expression .
    (15) Expression -> Expression . ADD Expression
    (16) Expression -> Expression . SUB Expression
    (17) Expression -> Expression . MUL Expression
    (18) Expression -> Expression . DIV Expression

    SEM             reduce using rule 3 (Write -> WRITE Expression .)
    $end            reduce using rule 3 (Write -> WRITE Expression .)
    ELSE            reduce using rule 3 (Write -> WRITE Expression .)
    END             reduce using rule 3 (Write -> WRITE Expression .)
    ADD             shift and go to state 35
    SUB             shift and go to state 36
    MUL             shift and go to state 37
    DIV             shift and go to state 38


state 29

    (24) Statements -> Statements SEM Statement .

    SEM             reduce using rule 24 (Statements -> Statements SEM Statement .)
    $end            reduce using rule 24 (Statements -> Statements SEM Statement .)
    ELSE            reduce using rule 24 (Statements -> Statements SEM Statement .)
    END             reduce using rule 24 (Statements -> Statements SEM Statement .)


state 30

    (4) If -> IF BooleanExpression THEN . Statements ELSE Statements END
    (5) If -> IF BooleanExpression THEN . Statements END
    (23) Statements -> . Statement
    (24) Statements -> . Statements SEM Statement
    (25) Statement -> . If
    (26) Statement -> . While
    (27) Statement -> . Assignment
    (28) Statement -> . Read
    (29) Statement -> . Write
    (4) If -> . IF BooleanExpression THEN Statements ELSE Statements END
    (5) If -> . IF BooleanExpression THEN Statements END
    (6) While -> . WHILE BooleanExpression DO Statements END
    (7) Assignment -> . Id BEC Expression
    (2) Read -> . READ Id
    (3) Write -> . WRITE Expression
    (22) Id -> . ID

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    READ            shift and go to state 12
    WRITE           shift and go to state 13
    ID              shift and go to state 14

    Statements                     shift and go to state 48
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    While                          shift and go to state 5
    Assignment                     shift and go to state 6
    Read                           shift and go to state 7
    Write                          shift and go to state 8
    Id                             shift and go to state 11

state 31

    (31) BooleanExpression -> BooleanExpression OR . BooleanTerm
    (32) BooleanTerm -> . BooleanFactor
    (33) BooleanTerm -> . BooleanTerm AND BooleanFactor
    (34) BooleanFactor -> . NOT BooleanFactor
    (35) BooleanFactor -> . Comparison
    (8) Comparison -> . Expression Relation Expression
    (15) Expression -> . Expression ADD Expression
    (16) Expression -> . Expression SUB Expression
    (17) Expression -> . Expression MUL Expression
    (18) Expression -> . Expression DIV Expression
    (19) Expression -> . LPAR Expression RPAR
    (20) Expression -> . NUM
    (21) Expression -> . Id
    (22) Id -> . ID

    NOT             shift and go to state 19
    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    BooleanTerm                    shift and go to state 49
    BooleanFactor                  shift and go to state 18
    Comparison                     shift and go to state 20
    Expression                     shift and go to state 21
    Id                             shift and go to state 24

state 32

    (33) BooleanTerm -> BooleanTerm AND . BooleanFactor
    (34) BooleanFactor -> . NOT BooleanFactor
    (35) BooleanFactor -> . Comparison
    (8) Comparison -> . Expression Relation Expression
    (15) Expression -> . Expression ADD Expression
    (16) Expression -> . Expression SUB Expression
    (17) Expression -> . Expression MUL Expression
    (18) Expression -> . Expression DIV Expression
    (19) Expression -> . LPAR Expression RPAR
    (20) Expression -> . NUM
    (21) Expression -> . Id
    (22) Id -> . ID

    NOT             shift and go to state 19
    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    BooleanFactor                  shift and go to state 50
    Comparison                     shift and go to state 20
    Expression                     shift and go to state 21
    Id                             shift and go to state 24

state 33

    (34) BooleanFactor -> NOT BooleanFactor .

    AND             reduce using rule 34 (BooleanFactor -> NOT BooleanFactor .)
    THEN            reduce using rule 34 (BooleanFactor -> NOT BooleanFactor .)
    OR              reduce using rule 34 (BooleanFactor -> NOT BooleanFactor .)
    DO              reduce using rule 34 (BooleanFactor -> NOT BooleanFactor .)


state 34

    (8) Comparison -> Expression Relation . Expression
    (15) Expression -> . Expression ADD Expression
    (16) Expression -> . Expression SUB Expression
    (17) Expression -> . Expression MUL Expression
    (18) Expression -> . Expression DIV Expression
    (19) Expression -> . LPAR Expression RPAR
    (20) Expression -> . NUM
    (21) Expression -> . Id
    (22) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 51
    Id                             shift and go to state 24

state 35

    (15) Expression -> Expression ADD . Expression
    (15) Expression -> . Expression ADD Expression
    (16) Expression -> . Expression SUB Expression
    (17) Expression -> . Expression MUL Expression
    (18) Expression -> . Expression DIV Expression
    (19) Expression -> . LPAR Expression RPAR
    (20) Expression -> . NUM
    (21) Expression -> . Id
    (22) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 52
    Id                             shift and go to state 24

state 36

    (16) Expression -> Expression SUB . Expression
    (15) Expression -> . Expression ADD Expression
    (16) Expression -> . Expression SUB Expression
    (17) Expression -> . Expression MUL Expression
    (18) Expression -> . Expression DIV Expression
    (19) Expression -> . LPAR Expression RPAR
    (20) Expression -> . NUM
    (21) Expression -> . Id
    (22) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 53
    Id                             shift and go to state 24

state 37

    (17) Expression -> Expression MUL . Expression
    (15) Expression -> . Expression ADD Expression
    (16) Expression -> . Expression SUB Expression
    (17) Expression -> . Expression MUL Expression
    (18) Expression -> . Expression DIV Expression
    (19) Expression -> . LPAR Expression RPAR
    (20) Expression -> . NUM
    (21) Expression -> . Id
    (22) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 54
    Id                             shift and go to state 24

state 38

    (18) Expression -> Expression DIV . Expression
    (15) Expression -> . Expression ADD Expression
    (16) Expression -> . Expression SUB Expression
    (17) Expression -> . Expression MUL Expression
    (18) Expression -> . Expression DIV Expression
    (19) Expression -> . LPAR Expression RPAR
    (20) Expression -> . NUM
    (21) Expression -> . Id
    (22) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 55
    Id                             shift and go to state 24

state 39

    (9) Relation -> EQ .

    LPAR            reduce using rule 9 (Relation -> EQ .)
    NUM             reduce using rule 9 (Relation -> EQ .)
    ID              reduce using rule 9 (Relation -> EQ .)


state 40

    (10) Relation -> NEQ .

    LPAR            reduce using rule 10 (Relation -> NEQ .)
    NUM             reduce using rule 10 (Relation -> NEQ .)
    ID              reduce using rule 10 (Relation -> NEQ .)


state 41

    (11) Relation -> LESS .

    LPAR            reduce using rule 11 (Relation -> LESS .)
    NUM             reduce using rule 11 (Relation -> LESS .)
    ID              reduce using rule 11 (Relation -> LESS .)


state 42

    (12) Relation -> LEQ .

    LPAR            reduce using rule 12 (Relation -> LEQ .)
    NUM             reduce using rule 12 (Relation -> LEQ .)
    ID              reduce using rule 12 (Relation -> LEQ .)


state 43

    (13) Relation -> GRTR .

    LPAR            reduce using rule 13 (Relation -> GRTR .)
    NUM             reduce using rule 13 (Relation -> GRTR .)
    ID              reduce using rule 13 (Relation -> GRTR .)


state 44

    (14) Relation -> GEQ .

    LPAR            reduce using rule 14 (Relation -> GEQ .)
    NUM             reduce using rule 14 (Relation -> GEQ .)
    ID              reduce using rule 14 (Relation -> GEQ .)


state 45

    (19) Expression -> LPAR Expression . RPAR
    (15) Expression -> Expression . ADD Expression
    (16) Expression -> Expression . SUB Expression
    (17) Expression -> Expression . MUL Expression
    (18) Expression -> Expression . DIV Expression

    RPAR            shift and go to state 56
    ADD             shift and go to state 35
    SUB             shift and go to state 36
    MUL             shift and go to state 37
    DIV             shift and go to state 38


state 46

    (6) While -> WHILE BooleanExpression DO . Statements END
    (23) Statements -> . Statement
    (24) Statements -> . Statements SEM Statement
    (25) Statement -> . If
    (26) Statement -> . While
    (27) Statement -> . Assignment
    (28) Statement -> . Read
    (29) Statement -> . Write
    (4) If -> . IF BooleanExpression THEN Statements ELSE Statements END
    (5) If -> . IF BooleanExpression THEN Statements END
    (6) While -> . WHILE BooleanExpression DO Statements END
    (7) Assignment -> . Id BEC Expression
    (2) Read -> . READ Id
    (3) Write -> . WRITE Expression
    (22) Id -> . ID

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    READ            shift and go to state 12
    WRITE           shift and go to state 13
    ID              shift and go to state 14

    Statements                     shift and go to state 57
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    While                          shift and go to state 5
    Assignment                     shift and go to state 6
    Read                           shift and go to state 7
    Write                          shift and go to state 8
    Id                             shift and go to state 11

state 47

    (7) Assignment -> Id BEC Expression .
    (15) Expression -> Expression . ADD Expression
    (16) Expression -> Expression . SUB Expression
    (17) Expression -> Expression . MUL Expression
    (18) Expression -> Expression . DIV Expression

    SEM             reduce using rule 7 (Assignment -> Id BEC Expression .)
    $end            reduce using rule 7 (Assignment -> Id BEC Expression .)
    ELSE            reduce using rule 7 (Assignment -> Id BEC Expression .)
    END             reduce using rule 7 (Assignment -> Id BEC Expression .)
    ADD             shift and go to state 35
    SUB             shift and go to state 36
    MUL             shift and go to state 37
    DIV             shift and go to state 38


state 48

    (4) If -> IF BooleanExpression THEN Statements . ELSE Statements END
    (5) If -> IF BooleanExpression THEN Statements . END
    (24) Statements -> Statements . SEM Statement

    ELSE            shift and go to state 58
    END             shift and go to state 59
    SEM             shift and go to state 15


state 49

    (31) BooleanExpression -> BooleanExpression OR BooleanTerm .
    (33) BooleanTerm -> BooleanTerm . AND BooleanFactor

    THEN            reduce using rule 31 (BooleanExpression -> BooleanExpression OR BooleanTerm .)
    OR              reduce using rule 31 (BooleanExpression -> BooleanExpression OR BooleanTerm .)
    DO              reduce using rule 31 (BooleanExpression -> BooleanExpression OR BooleanTerm .)
    AND             shift and go to state 32


state 50

    (33) BooleanTerm -> BooleanTerm AND BooleanFactor .

    AND             reduce using rule 33 (BooleanTerm -> BooleanTerm AND BooleanFactor .)
    THEN            reduce using rule 33 (BooleanTerm -> BooleanTerm AND BooleanFactor .)
    OR              reduce using rule 33 (BooleanTerm -> BooleanTerm AND BooleanFactor .)
    DO              reduce using rule 33 (BooleanTerm -> BooleanTerm AND BooleanFactor .)


state 51

    (8) Comparison -> Expression Relation Expression .
    (15) Expression -> Expression . ADD Expression
    (16) Expression -> Expression . SUB Expression
    (17) Expression -> Expression . MUL Expression
    (18) Expression -> Expression . DIV Expression

    AND             reduce using rule 8 (Comparison -> Expression Relation Expression .)
    THEN            reduce using rule 8 (Comparison -> Expression Relation Expression .)
    OR              reduce using rule 8 (Comparison -> Expression Relation Expression .)
    DO              reduce using rule 8 (Comparison -> Expression Relation Expression .)
    ADD             shift and go to state 35
    SUB             shift and go to state 36
    MUL             shift and go to state 37
    DIV             shift and go to state 38


state 52

    (15) Expression -> Expression ADD Expression .
    (15) Expression -> Expression . ADD Expression
    (16) Expression -> Expression . SUB Expression
    (17) Expression -> Expression . MUL Expression
    (18) Expression -> Expression . DIV Expression

    ADD             reduce using rule 15 (Expression -> Expression ADD Expression .)
    SUB             reduce using rule 15 (Expression -> Expression ADD Expression .)
    EQ              reduce using rule 15 (Expression -> Expression ADD Expression .)
    NEQ             reduce using rule 15 (Expression -> Expression ADD Expression .)
    LESS            reduce using rule 15 (Expression -> Expression ADD Expression .)
    LEQ             reduce using rule 15 (Expression -> Expression ADD Expression .)
    GRTR            reduce using rule 15 (Expression -> Expression ADD Expression .)
    GEQ             reduce using rule 15 (Expression -> Expression ADD Expression .)
    SEM             reduce using rule 15 (Expression -> Expression ADD Expression .)
    $end            reduce using rule 15 (Expression -> Expression ADD Expression .)
    ELSE            reduce using rule 15 (Expression -> Expression ADD Expression .)
    END             reduce using rule 15 (Expression -> Expression ADD Expression .)
    RPAR            reduce using rule 15 (Expression -> Expression ADD Expression .)
    AND             reduce using rule 15 (Expression -> Expression ADD Expression .)
    THEN            reduce using rule 15 (Expression -> Expression ADD Expression .)
    OR              reduce using rule 15 (Expression -> Expression ADD Expression .)
    DO              reduce using rule 15 (Expression -> Expression ADD Expression .)
    MUL             shift and go to state 37
    DIV             shift and go to state 38

  ! MUL             [ reduce using rule 15 (Expression -> Expression ADD Expression .) ]
  ! DIV             [ reduce using rule 15 (Expression -> Expression ADD Expression .) ]
  ! ADD             [ shift and go to state 35 ]
  ! SUB             [ shift and go to state 36 ]


state 53

    (16) Expression -> Expression SUB Expression .
    (15) Expression -> Expression . ADD Expression
    (16) Expression -> Expression . SUB Expression
    (17) Expression -> Expression . MUL Expression
    (18) Expression -> Expression . DIV Expression

    ADD             reduce using rule 16 (Expression -> Expression SUB Expression .)
    SUB             reduce using rule 16 (Expression -> Expression SUB Expression .)
    EQ              reduce using rule 16 (Expression -> Expression SUB Expression .)
    NEQ             reduce using rule 16 (Expression -> Expression SUB Expression .)
    LESS            reduce using rule 16 (Expression -> Expression SUB Expression .)
    LEQ             reduce using rule 16 (Expression -> Expression SUB Expression .)
    GRTR            reduce using rule 16 (Expression -> Expression SUB Expression .)
    GEQ             reduce using rule 16 (Expression -> Expression SUB Expression .)
    SEM             reduce using rule 16 (Expression -> Expression SUB Expression .)
    $end            reduce using rule 16 (Expression -> Expression SUB Expression .)
    ELSE            reduce using rule 16 (Expression -> Expression SUB Expression .)
    END             reduce using rule 16 (Expression -> Expression SUB Expression .)
    RPAR            reduce using rule 16 (Expression -> Expression SUB Expression .)
    AND             reduce using rule 16 (Expression -> Expression SUB Expression .)
    THEN            reduce using rule 16 (Expression -> Expression SUB Expression .)
    OR              reduce using rule 16 (Expression -> Expression SUB Expression .)
    DO              reduce using rule 16 (Expression -> Expression SUB Expression .)
    MUL             shift and go to state 37
    DIV             shift and go to state 38

  ! MUL             [ reduce using rule 16 (Expression -> Expression SUB Expression .) ]
  ! DIV             [ reduce using rule 16 (Expression -> Expression SUB Expression .) ]
  ! ADD             [ shift and go to state 35 ]
  ! SUB             [ shift and go to state 36 ]


state 54
